--- a/secd.org
+++ b/secd.org
@@ -67,7 +67,7 @@ of the parts. Each of these macros operate on a machine's 64-bit registers
 --- they don't affect what is stored in the abstract machine's memory.
 They each follow a similar pattern: mask\rightarrow shift\rightarrow tag.    
            
-@ Numbers. We use 62 bit signed integers. Overflow behavior is undefined
+@ Numbers. We use 62-bit signed integers. Overflow behavior is undefined
   for now.
    
 @d mknumber(n)    (((cell)n) << 2)
