--- a/secd.org
+++ b/secd.org
@@ -581,7 +581,7 @@ void print_sexp(index i) @+ {
         printf(" ");
         if (tail(c)) print_sexp(tail(c));
     }
-    else printf(" %lld ", number(c));
+    else printf(" %lld ", getnumber(c));
 
 }
         
@@ -601,7 +601,7 @@ void validate_ld_implementation(void) @+ {
     f = 40;
     index w = popc();
     assert(w == 7);
-    assert(number(w) == 1); // LD
+    assert(getnumber(w) == 1); // LD
     assert(c == 12);
     ld();
     assert(head(mem[head(mem[s])]) == 25);
@@ -615,9 +615,9 @@ void validate_ldc_implementation(void) @+ {
     mem[101] = mknumber(2);
     mem[103] = mknumber(42);
     index w = popc();
-    assert(number(w) == 2); // LDC
+    assert(getnumber(w) == 2); // LDC
     ldc();
-    assert(number(head(mem[s])) == 42);
+    assert(getnumber(head(mem[s])) == 42);
 }
 
 void validate_ldf_implementation(void) @+ {
@@ -627,7 +627,7 @@ void validate_ldf_implementation(void) @+ {
     c = 12;
     f = 100;
     index w = popc();
-    assert(number(w) == 3); // LDF
+    assert(getnumber(w) == 3); // LDF
     ldf();
     assert(head(mem[head(mem[s])]) == 20);
 }
@@ -642,7 +642,10 @@ void validate_atom_implementation(void) @+ {
     c = 1;
     f = 9;
     index w = popc();
-    assert(number(w) == 12); // ATOM
+    printf("GUIDO: index w = %u\n", w);
+    printf("GUIDO: mem[w] = %llu\n", mem[w]);
+    printf("GUIDO: mem[w] >> 2 = %llu\n", mem[w] >> 2);
+    assert(getnumber(w) == 12); // ATOM
     atom();
     assert(head(mem[s]) == F);
     atom();
@@ -656,7 +659,7 @@ void validate_cons_implementation(void) @+ {
     c = 1;
     f = 10;
     index w = popc();
-    assert(number(w) == 13); // CONS
+    assert(getnumber(w) == 13); // CONS
     cons();
     assert(head(mem[s]) == 10);
     assert(head(mem[head(mem[s])]) == 6);
@@ -670,7 +673,7 @@ void validate_eq_implementation(void) @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 14); // EQ
+    assert(getnumber(w) == 14); // EQ
     eq();
     assert(head(mem[s]) == T);
     eq();
@@ -684,9 +687,9 @@ void validate_add_implementation() @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 15); // ADD
+    assert(getnumber(w) == 15); // ADD
     add();
-    assert(number(head(mem[s])) == 12);
+    assert(getnumber(head(mem[s])) == 12);
 }
         
 void validate_sub_implementation() @+ {
@@ -696,9 +699,9 @@ void validate_sub_implementation() @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 16); // SUB
+    assert(getnumber(w) == 16); // SUB
     sub();
-    assert(number(head(mem[s])) == 2);
+    assert(getnumber(head(mem[s])) == 2);
 }
         
 void validate_mul_implementation() @+ {
@@ -708,9 +711,9 @@ void validate_mul_implementation() @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 17); // MUL
+    assert(getnumber(w) == 17); // MUL
     mul();
-    assert(number(head(mem[s])) == 35);
+    assert(getnumber(head(mem[s])) == 35);
 }
         
 void validate_div_implementation() @+ {
@@ -720,9 +723,9 @@ void validate_div_implementation() @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 18); // DIV
+    assert(getnumber(w) == 18); // DIV
     div();
-    assert(number(head(mem[s])) == 1);
+    assert(getnumber(head(mem[s])) == 1);
 }
         
 void validate_rem_implementation() @+ {
@@ -732,9 +735,9 @@ void validate_rem_implementation() @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 19); // REM
+    assert(getnumber(w) == 19); // REM
     rem();
-    assert(number(head(mem[s])) == 2);
+    assert(getnumber(head(mem[s])) == 2);
 }
         
 void validate_leq_implementation() @+ {
@@ -744,7 +747,7 @@ void validate_leq_implementation() @+ {
     c = 21;
     f = 10;
     index w = popc();
-    assert(number(w) == 20); // LEQ
+    assert(getnumber(w) == 20); // LEQ
     leq();
     assert(head(mem[s]) == F);
 }
@@ -1355,7 +1358,7 @@ https://tug.org/fonts/fontinstall.html
 cell mem[limit];
 index f; // free list
 
-int64_t number(index i) @+ {
+int64_t getnumber(index i) @+ {
     return (int64_t)(mem[i]) >> 2;
 }
 
@@ -1603,8 +1606,8 @@ f = 1;
 #+begin_src c
 index locate(index pair) @+ {
     // This all assumes head and tail return an index
-    int64_t frame    = number(head(mem[pair]));
-    int64_t position = number(tail(mem[pair])); // Is ordinal a better name?
+    int64_t frame    = getnumber(head(mem[pair]));
+    int64_t position = getnumber(tail(mem[pair])); // Is ordinal a better name?
     index w = e;                              // 0. Start at the top of the environment
     while (frame-- > 0) w = tail(mem[w]);     // 1. walk to the correct frame
     w = head(mem[w]);                         // 2. step onto the frame's list
@@ -1733,7 +1736,7 @@ void cons(void) @+ {
 void eq(void) @+ {
     index x = pops();
     index y = pops();
-    bool b = x == y || number(x) == number(y);
+    bool b = x == y || getnumber(x) == getnumber(y);
     s = addcons(b ? T : F, s);
 }
 #+end_src
@@ -1743,8 +1746,8 @@ void eq(void) @+ {
 #+name: ADD Instruction
 #+begin_src c
 void add(void) @+ {
-    int64_t x = number(pops());
-    int64_t y = number(pops());
+    int64_t x = getnumber(pops());
+    int64_t y = getnumber(pops());
     s = addcons(addcell(mknumber(x + y)), s);
 }
 #+end_src
@@ -1754,8 +1757,8 @@ void add(void) @+ {
 #+name: SUB Instruction
 #+begin_src c
 void sub(void) @+ {
-    int64_t x = number(pops());
-    int64_t y = number(pops());
+    int64_t x = getnumber(pops());
+    int64_t y = getnumber(pops());
     s = addcons(addcell(mknumber(y - x)), s);
 }
 #+end_src
@@ -1765,8 +1768,8 @@ void sub(void) @+ {
 #+name: MUL Instruction
 #+begin_src c
 void mul(void) @+ {
-    int64_t x = number(pops());
-    int64_t y = number(pops());
+    int64_t x = getnumber(pops());
+    int64_t y = getnumber(pops());
     s = addcons(addcell(mknumber(x * y)), s);
 }
 #+end_src
@@ -1776,8 +1779,8 @@ void mul(void) @+ {
 #+name: DIV Instruction
 #+begin_src c
 void div(void) @+ {
-    int64_t x = number(pops());
-    int64_t y = number(pops());
+    int64_t x = getnumber(pops());
+    int64_t y = getnumber(pops());
     s = addcons(addcell(mknumber(y / x)), s);
 }
 #+end_src
@@ -1787,8 +1790,8 @@ void div(void) @+ {
 #+name: REM Instruction
 #+begin_src c
 void rem(void) @+ {
-    int64_t x = number(pops());
-    int64_t y = number(pops());
+    int64_t x = getnumber(pops());
+    int64_t y = getnumber(pops());
     s = addcons(addcell(mknumber(y % x)), s);
 }
 #+end_src
@@ -1800,7 +1803,7 @@ void rem(void) @+ {
 void leq(void) @+ {
     index x = pops();
     index y = pops();
-    bool b = number(y) <= number(x);
+    bool b = getnumber(y) <= getnumber(x);
     s = addcons(b ? T : F, s);
 }
 #+end_src
